automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <form id="cityForm" action="">
-    <input type="text" placeholder="Enter city" id="city"/>
+    <input type="text" placeholder="Enter city" class="city"/>
     <input type="submit"/>
   </form>
 
